--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en-us">
 
-    </head>
-
+  <head>
+    <meta charset="UTF-8">
+    <title>Units and Fonts</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+  </head>
         <body>
 
 
