Changing Color of Header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Units and Fonts</title>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/style.css"/>
   </head>
         <body>
-
+            <h1 >My name is Sage!</h1>
 
         </body>
 
