--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
         <body>
-            <h1 >My name is Sage!</h1>
-
+            <h1 class="header">My name is Sage!</h1>
+            <nav>
+                <li>About Me</li>
+                <li>Work</li>
+                <li>Contact Me</li>
+                <li>Resume</li>
+            </nav>
         </body>
-
 
     <footer>
 
