Added Bio and Welcome Message

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Units and Fonts</title>
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
+        <header>
+            <h1 class="header">Welcome<h1></h1>
+            <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+              </div>
+            </header>
         <body>
-            <h1 class="header">My name is Sage!</h1>
-            <nav>
-                <li>About Me</li>
-                <li>Work</li>
-                <li>Contact Me</li>
-                <li>Resume</li>
-            </nav>
+            <p class="welcomemessage">My name is Carolyn Lupi and I am working on being a front-end developer. I am currently working on finishing my bootcamp from the University of Miami to learn HTML, CSS, Javascript and more!</p>
         </body>
 
     <footer>
