Added About Me section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
         <header>
-            <h1 class="header">Welcome<h1></h1>
+            <h1 class="header">Carolyn Lupi<h1></h1>
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
                 <a href="#news">News</a>
@@ -16,7 +16,12 @@
               </div>
             </header>
         <body>
-            <p class="welcomemessage">My name is Carolyn Lupi and I am working on being a front-end developer. I am currently working on finishing my bootcamp from the University of Miami to learn HTML, CSS, Javascript and more!</p>
+            <div class="column-2">
+                <h1>About Me</h1>
+                <p>My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
+                <p>On my free time, I enjoy painting and going to the beach.</p>
+              <p><button class="button">Contact</button></p>
+            </div>
         </body>
 
     <footer>
