--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
               </div>
             </header>
         <body>
-            <div class="column-2">
+            <div class="box1">
                 <h1>About Me</h1>
                 <p>My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
                 <p>On my free time, I enjoy painting and going to the beach.</p>
-              <p><button class="button">Contact</button></p>
+            </div>
+            <div class="box1">
+                <img class="box1-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
+            </div>  
             </div>
         </body>
 
