--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h1 class="header">Carolyn Lupi<h1></h1>
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
-                <a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a href="#news" href="#news">News</a>
+                <a href="#contact" href="#contact">Contact</a>
+                <a href="#about" href="about">About</a>
               </div>
             </header>
             <div class="box1">
@@ -24,13 +24,23 @@
             <div class="box1">
                 <img class="box1-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
             </div>  
+    <div class="button-container1">
+            <div class="button-column">
+                      <button>Project 1</button>
+                      <button>Project 2</button>
+                      <button>Project 3</button>
+                      <button>Project 4</button>
             </div>
-            <div>
-                <h2 class="">Work:</h2>
+            <div class="button-column2">
+                      <button>Project 5</button>
+                      <button>Project 6</button>
+                      <button>Project 7</button>
+                      <button>Project 8</button>
             </div>
+    </div>
     <footer>
 
     </footer>
-
+    </body>
 
 </html>
