--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a class="active" href="#home">Home</a>
                 <a href="#news" href="#news">News</a>
                 <a href="#contact" href="#contact">Contact</a>
-                <a href="#about" href="about">About</a>
+                <a href="#projects" href="projects">Projects</a>
               </div>
             </header>
             <div class="box1">
@@ -21,23 +21,23 @@
                 <p>My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
                 <p>On my free time, I enjoy painting and going to the beach.</p>
             </div>
-            <div class="box1">
-                <img class="box1-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
+            <div class="box2">
+                <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
             </div>  
     <div class="button-container1">
             <div class="button-column">
-                      <button>Project 1</button>
-                      <button>Project 2</button>
-                      <button>Project 3</button>
-                      <button>Project 4</button>
-            </div>
-            <div class="button-column2">
-                      <button>Project 5</button>
-                      <button>Project 6</button>
-                      <button>Project 7</button>
-                      <button>Project 8</button>
+                      <button>Home</button>
+                      <button>News</button>
+                      <button>Contact</button>
+                      <button>Projects</button>
             </div>
     </div>
+    <h3>
+        <div>
+        <p>Projects:</p>
+        <p>Created portfolio, learned repositorys, learned HTML & CSS.</p>
+        </div>
+    </h3>
     <footer>
 
     </footer>
