--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Units and Fonts</title>
+    <title></title>
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
    <body>
@@ -17,25 +17,16 @@
               </div>
             </header>
             <div class="box1">
-                <h1>About Me</h1>
-                <p>My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
-                <p>On my free time, I enjoy painting and going to the beach.</p>
+                <h1 class="box1-aboutme">About Me</h1>
+                <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
+                <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
             </div>
             <div class="box2">
                 <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
             </div>  
-    <div class="button-container1">
-            <div class="button-column">
-                      <button>Home</button>
-                      <button>News</button>
-                      <button>Contact</button>
-                      <button>Projects</button>
-            </div>
-    </div>
-    <h3>
         <div>
-        <p>Projects:</p>
-        <p>Created portfolio, learned repositorys, learned HTML & CSS.</p>
+        <h2 class="projects1">Projects:</p>
+        <p class="projects1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
         </div>
     </h3>
     <footer>
