--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Carolyn's Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
    <body>
         <header>
-            <h1 class="header">Carolyn Lupi<h1></h1>
+            <h1 class="header">CAROLYN SAGE LUPI<h1></h1>
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#news" href="#news">News</a>
-                <a href="#contact" href="#contact">Contact</a>
-                <a href="#projects" href="projects">Projects</a>
+              <ul class="homebutton">
+                <button class="active" href="#home">Home</a>
+                <button href="#contact">Contact</a>
+                <button href="projects">Projects</a>
               </div>
             </header>
             <div class="box1">
@@ -25,9 +25,14 @@
                 <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
             </div>  
         <div>
-        <h2 class="projects1">Projects:</p>
-        <p class="projects1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
+        <h2 class="body">Projects:</p>
+             <p class="body1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
         </div>
+        <div>
+        <h2 class="body">Contact:</p>
+          <p class="body1">Email: Karolynlupi@gmail.com</p>
+        </div>
+          
     </h3>
     <footer>
 
