Updates from Grader Suggestions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carolyn's Portfolio</title>
@@ -8,32 +7,39 @@
   </head>
    <body>
         <header>
-            <h1 class="header">CAROLYN SAGE LUPI<h1></h1>
+            <h1 class="header">CAROLYN SAGE LUPI</h1>
             <div class="topnav">
-              <ul class="homebutton">
-                <button class="active" href="#home">Home</a>
-                <button href="#contact">Contact</a>
-                <button href="projects">Projects</a>
-              </div>
-            </header>
-            <div class="box1">
+                 <a href="#aboutme">
+                   <button>About Me</button>
+                 </a>
+                 <a href="#projects">
+                   <button>Projects</button>
+                 </a>
+                 <a href="#Contact">
+                   <button>Contact</button>
+                 </a>
+            </div>
+          </header>
+          <div class="about-container">
+            <div id="about" class="box1">
                 <h1 class="box1-aboutme">About Me</h1>
                 <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
                 <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
             </div>
             <div class="box2">
-                <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200";>
+                <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200"; />
             </div>  
-        <div>
-        <h2 class="body">Projects:</p>
-             <p class="body1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
+          </div>
+        <div id="projects" class="projects" class="about-container">
+          <h2 class="body">Projects:</h2>
+          <p class="body1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
         </div>
-        <div>
-        <h2 class="body">Contact:</p>
+
+        <div id="contact" class="contact" class="about-container">
+          <h2 class="body">Contact:</h2>
           <p class="body1">Email: Karolynlupi@gmail.com</p>
         </div>
           
-    </h3>
     <footer>
 
     </footer>
