Added CSS elements to background and throughout body

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+  <head class="background">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carolyn's Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
-   <body>
+   <body class="default">
         <header>
-            <h1 class="header">CAROLYN SAGE LUPI</h1>
             <div class="topnav">
                  <a href="#aboutme">
-                   <button>About Me</button>
+                   <li>About Me</li>
                  </a>
                  <a href="#projects">
-                   <button>Projects</button>
+                   <li>Projects</li>
                  </a>
                  <a href="#Contact">
-                   <button>Contact</button>
+                  <li>Contact</li>
                  </a>
             </div>
-          </header>
-          <div class="about-container">
+        </header>
+        <h1 class="header">Hi, I'm Carolyn Lupi.</h1>
+            <div class="about-container">
             <div id="about" class="box1">
                 <h1 class="box1-aboutme">About Me</h1>
                 <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
