--- a/index.html
+++ b/index.html
@@ -6,43 +6,52 @@
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
    <body class="default">
-        <header>
-            <div class="topnav">
-                 <a href="#aboutme">
-                   <li>About Me</li>
-                 </a>
-                 <a href="#projects">
-                   <li>Projects</li>
-                 </a>
-                 <a href="#Contact">
-                  <li>Contact</li>
-                 </a>
+    <header>
+      <div class="topnav">
+        <a href="#aboutme">
+          <li>About Me</li></a>
+        <a href="#projects">
+          <li>Projects</li></a>
+        <a href="#Contact">
+          <li>Contact</li></a>
+      </div>
+    </header>
+  <h1 class="header">Hi, I'm Carolyn Lupi
+    <img class="sparkle-img" src="./assets/images/sparkle.svg" alt="sparkle" /></img> 
+  </h1>
+    <div class="about-container">
+      <div id="aboutme" class="box1">
+        <h1 class="box1-aboutme">Introduction</h1>
+          <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
+          <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
             </div>
-        </header>
-        <h1 class="header">Hi, I'm Carolyn Lupi.</h1>
-            <div class="about-container">
-            <div id="about" class="box1">
-                <h1 class="box1-aboutme">About Me</h1>
-                <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
-                <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
             </div>
+            
+            <div class="body-container">
             <div class="box2">
                 <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200"; />
             </div>  
+            <div id="contact" class="contact">
+              <h2 class="contact-section">Contact:</h2>
+              <p class="contact-section">Email: Karolynlupi@gmail.com</p>
+              <p class="contact-section">Phone: +123-456-7890</p>
+            </div>
+            </div>
+          </h1>
+        <div class="projects-section"></div>
+          <div id="projects" class="projects">
+            <h2 class="projects-section">Projects:</h2>
+              <p class="projects-section">Created portfolio, learned repositorys, learned HTML & CSS.</p>
           </div>
-        <div id="projects" class="projects" class="about-container">
-          <h2 class="body">Projects:</h2>
-          <p class="body1">Created portfolio, learned repositorys, learned HTML & CSS.</p>
         </div>
-
-        <div id="contact" class="contact" class="about-container">
-          <h2 class="body">Contact:</h2>
-          <p class="body1">Email: Karolynlupi@gmail.com</p>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>Carolyn Lupi's Portfolio</h6>
+            <p class="text-justify">This page is showing all current learned projects that Carolyn has worked on so far while in the coding bootcamp from the University of Miami. All matter is subject to change.</p>
         </div>
-          
-    <footer>
-
+        <div class="col-xs-6 col-md-3"></div>
     </footer>
-    </body>
-
+   </body>
 </html>
