--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <body class="default">
     <header>
       <div class="topnav">
-        <a href="#aboutme">
-          <li>About Me</li></a>
+        <a href="#introduction">
+          <li>Introduction</li></a>
         <a href="#projects">
           <li>Projects</li></a>
         <a href="#Contact">
@@ -20,13 +20,12 @@
     <img class="sparkle-img" src="./assets/images/sparkle.svg" alt="sparkle" /></img> 
   </h1>
     <div class="about-container">
-      <div id="aboutme" class="box1">
+      <div id="Introduction" class="box1">
         <h1 class="box1-aboutme">Introduction</h1>
           <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the University of Miami. I am excited to start my journey into this career.</p>
           <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
             </div>
             </div>
-            
             <div class="body-container">
             <div class="box2">
                 <img class="box2-img" src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200"; />
