--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carolyn's Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <!--Navigation Section-->
   <body class="default">
@@ -42,36 +43,40 @@
       </div>
   </div>
   <!--Projects Section-->
-    <div class="projects-section">  
-        <h2>Projects:</h2>
-    </div>
+    <h2 class="project-header">Current Projects</h2>
+    <div class="carousel-section">
     <div class="carousel-item active">
-      <div class="container">
-        <h1>Finished Projects</h1>
-          <p>This is an example paragraph</p>
-      <div id="carousel-item" class="carousel slide">
-         <div class="carousel-inner">
-           <div class="carousel-item active">
-              <img src="assets/images/Password Generator.png" class="d-block w-100" alt="Password Generator">
-            </div>
-           <div class="carousel-item">
-              <img src="assets/images/Code Refactor.png" class="d-block w-100" alt="Code Refactor">
-            </div>
-           <div class="carousel-item">
-             <img src="assets/images/Portfolio.png" class="d-block w-100" alt="Carolyn's Portfolio">
-           </div>
-          </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-       </button>
-      </div>
-      </div>
-    </div>
+    <div class="container">
+  <div id="carouselExample" class="carousel slide">
+        <div class="carousel-item active">
+          <img class="carousel-img" src="assets/images/Password Generator.png" alt="Password Generator">
+        </div>
+      <div class="carousel-item">
+          <img class="carousel-img" src="assets/images/Code Refactor.png" alt="Code Refactor">
+       </div>
+      <div class="carousel-item">
+         <img class="carousel-img" src="assets/images/Portfolio.png" alt="Carolyn's Portfolio">
+       </div>
+       </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <span class="visually-hidden">Previous</span>
+     </button>
+     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+     </button>
+  </div>
+  </div>
+</div>
+</div>
+
+
+
+
+       <!--Bootstrap Javascript Add In-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
 <!--Footer Section-->
   <footer class="site-footer">
     <div class="container">
@@ -82,5 +87,4 @@
         </div>
         <div class="col-xs-6 col-md-3"></div>
     </footer>
-   </body>
 </html>
