Added Animation to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="topnav">
         <a href="#introduction">
           <li>Introduction</li></a>
-        <a href="#projects">
+        <a href="#carouselExample">
           <li>Projects</li></a>
         <a href="#contact">
           <li>Contact</li></a>
