--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Carolyn's Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
   </head>
   <!--Navigation Section-->
   <body class="default">
@@ -19,7 +20,12 @@
       </div>
     </header>
   <!--Header of Site-->
-  <h1 class="header">Hi, I'm Carolyn Lupi
+  <svg viewBox="0 0 1320 300">
+  <text x="50%" y="50%" dy=".35em" text-anchor="middle">
+    Hi, I'm Carolyn Lupi
+  </text>
+</svg>  
+  <h1 class="header">
     <img class="sparkle-img" src="./assets/images/sparkle.svg" alt="sparkle" /></img> 
   </h1>
   <!--Introduction Section-->
