--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <h6>Carolyn Lupi's Portfolio</h6>
-            <p class="text-justify">This page is showing all current learned projects that Carolyn has worked on so far while in the coding bootcamp from the University of Miami. All matter is subject to change.</p>
+            <p class="text-footer">This page is showing all current learned projects <br> that Carolyn has worked on so far while in the coding bootcamp from the University of Miami. <br> All matter is subject to change.</p>
         </div>
         <div class="col-xs-6 col-md-3"></div>
     </footer>
