--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head class="background">
+<head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carolyn's Portfolio</title>
   <link rel="stylesheet" href="./assets/style.css" />
@@ -43,20 +43,18 @@
       <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
     </div>
   </div>
-  <!--Contact Section-->
-  <div class="body-container">
-    <div class="box2">
-      <img class="box2-img"
-        src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200"
-        ; />
-    </div>
-    <div class="contact-section"></div>
-    <div id="contact" class="contact">
-      <h2 class="contact-section">Contact:</h2>
-      <p class="contact-section">Email: Karolynlupi@gmail.com</p>
-      <p class="contact-section">Phone: +123-456-7890</p>
-    </div>
+ <!--Contact Section-->
+<div class="body-container">
+  <div class="box2">
+    <div class="box2-img"
+      src="https://www.zdnet.com/a/img/resize/a0dcec40a8cd8d2e1b3a9e12a05c2819622d20be/2021/07/19/8a337c80-5ed6-43a1-98fb-b981d420890f/programming-languages-shutterstock-1680857539.jpg?auto=webp&fit=crop&height=1200&width=1200"></div>
+  <div id="contact" class="contact">
+    <h2 class="contact-section">Contact:</h2>
+    <p class="contact-section">Email: Karolynlupi@gmail.com</p>
+    <p class="contact-section">Phone: +123-456-7890</p>
   </div>
+</div>
+
   <!--Projects Section-->
   <h2 class="project-header">Current Projects</h2>
   <div class="carousel-section">
@@ -84,9 +82,6 @@
       </div>
     </div>
   </div>
-  </div>
-
-
 
 
   <!--Bootstrap Javascript Add In-->
