--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
   <div class="about-container">
     <div id="introduction" class="box1">
       <h1 class="box1-aboutme">Introduction</h1>
-      <p class="box1-aboutme">My name is Carolyn Lupi. I am currently studying to be a full stack programmer at the
-        University of Miami. I am excited to start my journey into this career.</p>
-      <p class="box1-aboutme">On my free time, I enjoy painting and going to the beach.</p>
+      <p class="box1-aboutme">Hi, my name is Carolyn Lupi. I am a dedicated student currently pursuing my passion for becoming a full stack programmer at the esteemed University of Miami. Embarking on this exciting journey into the world of programming fills me with enthusiasm and determination. Outside of coding, I find joy in painting and going to the beach. </p>
+      <p class="box1-aboutme">I am thrilled to embrace the challenges and opportunities that lie ahead in my programming career.</p>
     </div>
   </div>
  <!--Contact Section-->
